# fs_game

./: FS.py  README.md  pyproject.toml
src/: game.py
test/: test_game.py
