[tool.poetry]
name = "fs-game"
version = "0.1.0"
description = "A space invader game for young cousing to spend some time."
authors = ["edbezci <ebbezci@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fs_game"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
isort = "^5.12.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
version_format = "{version}"
include = "^src/.*"

[tool.pre-commit]
hooks = [
    "black",
    "isort"
]

[tool.black]
line-length = 85
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
